[gd_scene load_steps=32 format=3 uid="uid://crorlt0bjpugl"]

[ext_resource type="Texture2D" uid="uid://cdysdx00j67l6" path="res://other_assets/UI/pause_screen.png" id="1_hwc3n"]
[ext_resource type="Script" path="res://other_assets/UI/pause_screen.gd" id="1_tllp7"]
[ext_resource type="Texture2D" uid="uid://c7r4gfrfiydge" path="res://other_assets/UI/Items_sprite/panel_waktu.png" id="2_4g4uo"]
[ext_resource type="Texture2D" uid="uid://bh74ehsgpwmok" path="res://other_assets/UI/button_sprites/kembali_btn.png" id="2_g25nj"]
[ext_resource type="Texture2D" uid="uid://b0tmoh43hbp71" path="res://other_assets/UI/item_none.png" id="3_2dkpg"]
[ext_resource type="Texture2D" uid="uid://crxwpuxhpj8a4" path="res://other_assets/UI/button_sprites/keluar_btn.png" id="3_in6bl"]
[ext_resource type="Texture2D" uid="uid://g0sglkf6k3im" path="res://other_assets/UI/button_sprites/item container.png" id="6_2014i"]
[ext_resource type="Texture2D" uid="uid://boh1kkol0brlx" path="res://other_assets/UI/Items_sprite/data_jumlah.png" id="6_llanl"]
[ext_resource type="Texture2D" uid="uid://cisjg88o1b4e4" path="res://other_assets/UI/Items_sprite/broken_robot.png" id="7_6mhi7"]
[ext_resource type="FontFile" uid="uid://cuck8i8knhtlt" path="res://other_assets/fonts/VCRosdNEUE.ttf" id="7_a4hq1"]
[ext_resource type="FontFile" uid="uid://b5bdjkqhlu1oi" path="res://other_assets/fonts/VCR_OSD_MONO_1.001.ttf" id="8_efwip"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ufwkh"]
texture = ExtResource("2_g25nj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_duie8"]
texture = ExtResource("2_g25nj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3luho"]
texture = ExtResource("2_g25nj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7ss4b"]
texture = ExtResource("3_in6bl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xjcse"]
texture = ExtResource("3_in6bl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1x25e"]
texture = ExtResource("3_in6bl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xa0ef"]
texture = ExtResource("2_4g4uo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gn8xh"]
texture = ExtResource("2_4g4uo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dwnf6"]
texture = ExtResource("2_4g4uo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qq5ic"]
texture = ExtResource("3_2dkpg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kp2oh"]
texture = ExtResource("7_6mhi7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_636fj"]
texture = ExtResource("7_6mhi7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w1ukm"]
texture = ExtResource("7_6mhi7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m5ylu"]
texture = ExtResource("3_2dkpg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ifowl"]
texture = ExtResource("6_llanl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b80ey"]
texture = ExtResource("6_llanl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_77y7f"]
texture = ExtResource("6_llanl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dtjux"]
texture = ExtResource("3_2dkpg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kxkph"]
texture = ExtResource("6_2014i")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_45u2n"]
texture = ExtResource("6_2014i")

[node name="pause_screen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_tllp7")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_hwc3n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 160.0
offset_top = 150.0
offset_right = -160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 550

[node name="resume_btn" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(156, 58)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_ufwkh")
theme_override_styles/hover = SubResource("StyleBoxTexture_duie8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3luho")

[node name="quit_btn" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(156, 58)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_7ss4b")
theme_override_styles/hover = SubResource("StyleBoxTexture_xjcse")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1x25e")

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25
columns = 5

[node name="time_panel_btn" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_xa0ef")
theme_override_styles/hover = SubResource("StyleBoxTexture_gn8xh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dwnf6")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qq5ic")

[node name="robot_rusak_btn" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_kp2oh")
theme_override_styles/hover = SubResource("StyleBoxTexture_636fj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_w1ukm")
theme_override_styles/disabled = SubResource("StyleBoxTexture_m5ylu")

[node name="data_jumlah_btn" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_ifowl")
theme_override_styles/hover = SubResource("StyleBoxTexture_b80ey")
theme_override_styles/pressed = SubResource("StyleBoxTexture_77y7f")
theme_override_styles/disabled = SubResource("StyleBoxTexture_dtjux")

[node name="time_panel_btn4" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_xa0ef")
theme_override_styles/hover = SubResource("StyleBoxTexture_gn8xh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dwnf6")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qq5ic")
disabled = true

[node name="time_panel_btn5" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_xa0ef")
theme_override_styles/hover = SubResource("StyleBoxTexture_gn8xh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dwnf6")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qq5ic")
disabled = true

[node name="time_panel_btn6" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_xa0ef")
theme_override_styles/hover = SubResource("StyleBoxTexture_gn8xh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dwnf6")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qq5ic")
disabled = true

[node name="time_panel_btn7" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_xa0ef")
theme_override_styles/hover = SubResource("StyleBoxTexture_gn8xh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dwnf6")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qq5ic")
disabled = true

[node name="time_panel_btn8" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_xa0ef")
theme_override_styles/hover = SubResource("StyleBoxTexture_gn8xh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dwnf6")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qq5ic")
disabled = true

[node name="time_panel_btn9" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_xa0ef")
theme_override_styles/hover = SubResource("StyleBoxTexture_gn8xh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dwnf6")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qq5ic")
disabled = true

[node name="time_panel_btn10" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_xa0ef")
theme_override_styles/hover = SubResource("StyleBoxTexture_gn8xh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dwnf6")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qq5ic")
disabled = true

[node name="Panel_name" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(850, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_kxkph")

[node name="item_name" type="Label" parent="VBoxContainer/Panel_name"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_a4hq1")
theme_override_font_sizes/font_size = 25
text = "Tidak ada bukti yang dipilih"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel_description" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(850, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_45u2n")

[node name="item_desc" type="Label" parent="VBoxContainer/Panel_description"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.1
anchor_right = 0.98
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_efwip")
theme_override_font_sizes/font_size = 25
horizontal_alignment = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
